--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
@@ -106,7 +107,8 @@
     "chess.js": "https://esm.sh/chess.js@^1.4.0",
     "tailwind-merge": "https://esm.sh/tailwind-merge@^3.4.0",
     "chessground": "https://esm.sh/chessground@9.1.1",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3",
+    "@/": "./"
   }
 }
 </script>
